--- a/scss/pages/_section-introduction-team.scss
+++ b/scss/pages/_section-introduction-team.scss
@@ -85,11 +85,19 @@
     }
   }
 }
+@include respond-below(wide) {
+  .section-introduction-team {
+    @include pxRem(padding, 80 0);
+    .introduction-team-list {
+      @include pxRem(margin-top, 70);
+    }
+  }
+}
 @include respond-below(medium) {
   .section-introduction-team {
     @include pxRem(padding, 40 0);
     .section-title::after {
-      @include pxRem(top, 90);
+      @include pxRem(top, 60);
     }
     .description {
       width: 79%;
